app-with-loadbalancer-service-deployment.yaml

---

apiVersion: v1
kind: Namespace
metadata:
  name: claudio-namespace

---

apiVersion: v1
kind: Service
metadata:
  namespace: claudio-namespace
  name: claudio-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: claudio-container



---
#https://docs.aws.amazon.com/eks/latest/userguide/autoscaling.html#cluster-autoscaler
#https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/
# https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: claudio-namespace
  name: claudio-deployment
spec:
  replicas: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  selector:
    matchLabels:
      app: claudio-container
  template:
    metadata:
      labels:
        app: claudio-container
    spec:                  
      containers:
        - name: claudio-container
          image: 361494667617.dkr.ecr.us-west-2.amazonaws.com/poker-analyzer-service-repository:0.0.1-SNAPSHOT
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 256Mi
