app-with-nodeport-service-deployment.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: claudio-namespace

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: claudio-namespace
  name: claudio-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: claudio-container
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: claudio-container
    spec:
      containers:
      - image: 361494667617.dkr.ecr.us-east-1.amazonaws.com/poker-analyzer-service-repository:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        name: claudio-container
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 256Mi
---

apiVersion: v1
kind: Service
metadata:
  namespace: claudio-namespace
  name: claudio-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: claudio-container
