app-ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: claudio-namespace
  name: claudio-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/healthcheck-protocol: 'HTTP'
    alb.ingress.kubernetes.io/healthcheck-path: /health

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: claudio-service
              port:
                number: 80
